# jira-qa-pipeline

./: .env.example  .gitignore  .ignore  CHANGELOG.md  CLAUDE.md  README.md  config.sample.yaml  config.yaml  generate_dashboard.py  pyproject.toml  pytest.ini  workflow_runner.py
.github/workflows/: ci.yml  release.yml
docs/claude/: README.md  common.md  current-ticket.md  step-01-plan.md  step-02-testcases.md  step-03-playwright.md  step-04-run.md  step-05-report.md  step-06-bugs.md  step-07-dashboard.md  step-08-sideeffects.md  todo-backlog.md
lib/: acli.py  config.py  doctor.py  fetch_jira.py  init_project.py  jira_rest.py  scheduler.py  state.py  validate_config.py
qa_pipeline/: __init__.py  cli.py
scripts/: bump_version.py  cleanup_workspace.ps1  release_notes.py  run_tests.ps1
steps/: step1_plan_generator.py  step2_testcase_generator.py  step3_playwright_generator.py  step4_test_runner.py  step5_report_generator.py  step6_bug_creator.py  step7_dashboard.py  step8_sideeffect_detector.py
templates/: README.md  qa_plan.md  qa_report.md  test_cases.md
templates/dashboard/: README.md  dashboard_spec.md
tests/: conftest.py  test_acli_detect_area.py  test_bump_version.py  test_generate_dashboard.py  test_init_project.py  test_release_notes.py  test_state.py  test_step6_bug_creator.py  test_validate_config.py
