[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-automation-pipeline"
version = "0.1.0"
description = "State-driven QA automation pipeline (Jira -> plan -> testcases -> Playwright -> report -> bugs -> dashboard -> sideeffects)"
readme = "CLAUDE.md"
requires-python = ">=3.13"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff"]

[project.scripts]
qa-pipeline = "qa_pipeline.cli:main"

[tool.setuptools]
py-modules = ["workflow_runner", "generate_dashboard"]

[tool.setuptools.packages.find]
include = ["lib*", "steps*", "qa_pipeline*"]

[tool.ruff]
target-version = "py313"
line-length = 100

exclude = [
  ".venv",
  "__pycache__",
  ".pytest_cache",
  ".pytest_tmp",
  "output",
  "output/_pytest_tmp",
  "test_tmp",
  "pytest_basetemp*",
]

[tool.ruff.lint]
# Start conservative; tighten over time.
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
